--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@ body {
 	font-weight: 800;
 }
 
+address {
+	font-style: normal;
+}
+
 /*--------------------------------------------------------------
 1.2 - HEADINGS
 -------------------------------------------------------------- */
@@ -134,16 +138,24 @@ form a:hover {
 /*--------------------------------------------------------------
 1.5 - LISTS
 -------------------------------------------------------------- */
-dt, dd {
-	display: inline-block
+footer ul {
+	padding-left: 0;
 }
-dt {
-	font-weight:100;
-	width: 20px;
+
+footer li {
+	list-style-type: none;
+	display: block;
 }
-dd {
+
+footer li span {
 	font-weight: 600;
+	color: white;
 }
+
+footer li a {
+	text-decoration: none;
+}
+
 /*--------------------------------------------------------------
 2.0 - MAIN MENU
 -------------------------------------------------------------- */
@@ -165,7 +177,7 @@ nav a {
 	padding:10px;
 }
 
-nav a:hover {
+nav a:hover, footer li a:hover {
 	background-color: rgba(255,255,255,.5);
 }
 
@@ -209,7 +221,6 @@ figure {
 }
 
 [class*="col-"]:last-of-type {
-	float: left;
 	padding-right: 0;
 }
 
@@ -224,28 +235,34 @@ figure {
 	width: 50%;
 }
 
+/*--
 .col-1-3 {
 	width: 33.33%;
 	padding: 1rem 0;
 }
+--*/
 
 .col-1-4 {
 	width: 25%;
 	padding-bottom: 0;
 }
 
+/*--
 .col-1-5 {
 	width: 20%;
 }
+--*/
 
 .col-1-6 {
 	width: 16.66%;
 }
 
+/*--
 .col-1-7 {
 	width: 14.28%
 }
 
+/*--
 .col-1-8 {
 	width: 12.5%;
 }
@@ -265,10 +282,13 @@ figure {
 .col-1-12 {
 	width: 8.33%;
 }
+--*/
+
 /*--------------------------------------------------------------
 3.2 - PARTIAL COLUMNS
 -------------------------------------------------------------- */
 
+/*--
 .col-2-3 {
 	width: 66.66%;
 }
@@ -281,11 +301,13 @@ figure {
 	text-align: left;
 	width: 40%;
 }
+--*/
 
 .col-3-5 {
 	width: 60%;
 }
 
+/*--
 .col-2-6 {
 	width: 16.66%;
 }
@@ -337,6 +359,7 @@ figure {
 .col-3-12 {
 	width: 8.33%;
 }
+--*/
 
 .col-9-12 {
 	width: 91.67%;
@@ -392,9 +415,11 @@ figure {
 /*--------------------------------------------------------------
 5.3 - SPACING
 -------------------------------------------------------------- */
+/*--
 .p-t-sm {
 	padding-top: 10px;
 }
+--*/
 .p-t-md {
 	padding-top: 20px;
 }
@@ -433,5 +458,73 @@ figure {
 
 @media screen and (max-width: 768px) {
 	
+/*--------------------------------------------------------------
+1.1 - BODY
+-------------------------------------------------------------- */
+	.col-1-4 p {
+		padding: 0 20px;
+	}
 	
+/*--------------------------------------------------------------
+1.2 - HEADLINES
+-------------------------------------------------------------- */
+	h1 {
+		margin: -44px;
+	}
+	
+/*--------------------------------------------------------------
+1.5 - LISTS
+-------------------------------------------------------------- */
+	nav ul {
+		text-align: center;
+	}
+	
+	nav li {
+		padding: 0 16px;
+	}
+	
+	.col-3-5 ul {
+		padding-left: 0;
+	}
+	
+/*--------------------------------------------------------------
+3.0 - SITE STRUCTURE
+-------------------------------------------------------------- */
+	img {
+		max-width: 150%;
+	}
+	
+	.col-1-6 {
+		float: none;
+		margin: 0 auto;
+	}
+	
+	[class*="col-"] {
+		padding: 0 .6rem 2rem 0;
+}
+	
+/*--------------------------------------------------------------
+3.1 - SINGLE COLUMNS
+-------------------------------------------------------------- */
+	.col-1-4 {
+		width: 100%;
+		margin-bottom: 50px;
+		padding-right: 0;
+	}
+	
+	#map {
+		width: 50%;
+	}
+	
+	footer .col-1-2:last-of-type {
+		width: 100%;
+	}
+	
+/*--------------------------------------------------------------
+3.2 - PARTIAL COLUMNS
+-------------------------------------------------------------- */
+	.col-3-5 {
+		float: none;
+		width: 100%;
+	}
 }
